fixed stylesheet for ff and opera, removed custom scrollbar style

--- a/Resources/public/css/console.css
+++ b/Resources/public/css/console.css
@@ -3,7 +3,8 @@
 	padding: 0.2em;
 	background-color: rgba(50,50,50,1);
 	color: rgba(240,240,240,1);
-	font-family: monospace;
+	font-family: monospace,monospace;
+	font-size: 0.9em;
 }
 
 .console_info_bar {
@@ -13,16 +14,9 @@
 }
 
 .console_log_container {
-	height: 400px;
+	height: 35em;
 	overflow: auto;
 }
-
-.console_log_container::-webkit-scrollbar{height:12px;width:12px;background-color:transparent;}
-.console_log_container::-webkit-scrollbar-track-piece{padding: 2em;margin-bottom:10px;background-color:transparent;}
-.console_log_container::-webkit-scrollbar-thumb:vertical,
-.console_log_container::-webkit-scrollbar-thumb:horizontal {background-color:rgba(255,255,255,0.4); border-radius: 3px;}
-.console_log_container::-webkit-scrollbar-thumb:vertical{height:25px}
-.console_log_container::-webkit-scrollbar-thumb:horizontal{width:25px}
 
 .console_log {
 	padding: 0 0.8em;
@@ -41,6 +35,7 @@
 
 .console_input {
 	line-height: 1.5em;
+	min-height: 1.5em;
 	padding: 0.5em;
 	background-color: transparent;
 	border: none;
@@ -61,6 +56,7 @@
 	border-color: rgba(240,240,240,0.3);
 	border-width: 1px 1px 0 1px;
 	border-style: solid;
+	line-height: 1.3;
 }
 
 .console_log_output {
@@ -72,6 +68,7 @@
 	border-color: rgba(240,240,240,0.3);
 	border-width: 0 1px 1px 1px;
 	border-style: solid;
+	line-height: 1.3;
 }
 
 .console_command {
@@ -87,10 +84,10 @@
 
 .console_suggestion_head {
 	font-weight: bold;
-	font-size: 1em;
 	margin: 0.2em 0 0 0;
 	padding: 0.5em;
 	background-color: rgba(20,20,20,1);
+	font-size: 1em;
 }
 
 .match {
